Fix alert z-index.

--- a/frontend/src/assets/styles/elements/_news-alert.scss
+++ b/frontend/src/assets/styles/elements/_news-alert.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: $header-height;
   max-width: $page-max-width;
-  z-index: 20;
+  z-index: 45;
   width: 100%;
 }
 .alert-wrapper {
